# TuringDataCloud

./: .gitignore  CMakeLists.txt  Makefile  README.md
structures/infarr/: infarr.h
structures/rbtree/: rbtree.c  rbtree.h
tests/: catch.hpp  main.c  main.cpp
tests/rbtree/: rbtree_test-main.c  rbtree_test.c  rbtree_test.cpp
